--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -5,29 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea HTML de Francisco</title>
-    <style>
-        h1{
-            color: rgb(42, 44, 42);
-        }
-
-        img{
-            width: 400px;
-        }
-
-        #thirdDiv{
-            height: 600px;
-            width:  500px;
-            background-color:  snow ;
-            padding: 50px;
-            border: thin blue;
-        }
-
-        #spanId{
-            font-size: 18px;
-            margin: 50px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="divClass"> 
